Docker and Trying to set up gifsicle

--- a/source/image-handler/thumbor.conf
+++ b/source/image-handler/thumbor.conf
@@ -68,7 +68,7 @@ ALLOW_ANIMATED_GIFS = True
 AUTO_WEBP = True
 OPTIMIZERS = [
    'thumbor_plugins.optimizers.pngquant',
-   'image-handler.optimizers.gifsicle',
+   'thumbor.optimizers.gifsicle',
    'thumbor.optimizers.gifv'
 ]
 #USE_GIFSICLE_ENGINE = True
