GIF working without animated gif

--- a/source/image-handler/thumbor.conf
+++ b/source/image-handler/thumbor.conf
@@ -68,10 +68,9 @@ ALLOW_ANIMATED_GIFS = True
 AUTO_WEBP = True
 OPTIMIZERS = [
    'thumbor_plugins.optimizers.pngquant',
-   'thumbor.optimizers.gifsicle',
    'thumbor.optimizers.gifv'
 ]
-#USE_GIFSICLE_ENGINE = True
+USE_GIFSICLE_ENGINE = True
 
 GIFSICLE_PATH='/var/task/gifsicle'
 
