All Work complete

--- a/source/image-handler/thumbor.conf
+++ b/source/image-handler/thumbor.conf
@@ -207,7 +207,7 @@ PNGQUANT_SPEED=3
 USE_GIFSICLE_ENGINE = True
 GIFSICLE_PATH='/var/task/gifsicle'
 ALLOW_ANIMATED_GIFS = True
-
+FFMPEG_PATH = '/var/task/ffmpeg'
 AUTO_WEBP = True
 PROGRESSIVE_JPEG = True
 
@@ -235,7 +235,7 @@ TC_AWS_LOADER_ROOT_PATH=''
 # This would allow you to load watermarks in over your images dynamically through a URI
 # E.g.
 # http://your-thumbor.com/unsafe/filters:watermark(http://example.com/watermark.png,0,0,50)/s3_bucket/photo.jpg
-TC_AWS_ENABLE_HTTP_LOADER=False
+TC_AWS_ENABLE_HTTP_LOADER=True
 
 TC_AWS_ALLOWED_BUCKETS=False # List of allowed bucket to be requested
 
