--- a/source/image-handler/thumbor.conf
+++ b/source/image-handler/thumbor.conf
@@ -153,7 +153,7 @@ DETECTORS = [
 # this is the security key used to encrypt/decrypt urls.
 # make sure this is unique and not well-known
 # This can be any string of up to 16 characters
-SECURITY_KEY = "MY_SECURE_KEY"
+SECURITY_KEY = "L5Z5IFA3VDSPU54J"
 
 # if you enable this, the unencryted URL will be available
 # to users.
