Pixel Size increase

--- a/source/image-handler/thumbor.conf
+++ b/source/image-handler/thumbor.conf
@@ -25,6 +25,8 @@ home = expanduser("~")
 # if the original image is larger than MAX_WIDTH x MAX_HEIGHT,
 # it is proportionally resized to MAX_WIDTH x MAX_HEIGHT
 # MAX_HEIGHT = 600
+MAX_PIXELS = 100000000.0
+
 
 # the quality of the generated image
 # this option can vary widely between
