Pixel Size increase

--- a/source/image-handler/thumbor.conf
+++ b/source/image-handler/thumbor.conf
@@ -129,8 +129,8 @@ ENGINE = 'thumbor.engines.pil'
 # at https://github.com/thumbor/thumbor/wiki
 DETECTORS = [
     'thumbor.detectors.face_detector',
-    #'thumbor.detectors.profile_detector',
-    #'thumbor.detectors.glasses_detector',
+    'thumbor.detectors.profile_detector',
+    'thumbor.detectors.glasses_detector',
     'thumbor.detectors.feature_detector',
 ]
 
@@ -161,7 +161,7 @@ SECURITY_KEY = "L5Z5IFA3VDSPU54J"
 # to users.
 # IT IS VERY ADVISED TO SET THIS TO False TO STOP OVERLOADING
 # OF THE SERVER FROM MALICIOUS USERS
-ALLOW_UNSAFE_URL = True
+ALLOW_UNSAFE_URL = False
 
 # Mixed storage classes. Change them to the fullname of the
 # storage you desire for each operation.
@@ -198,12 +198,12 @@ ALLOW_UNSAFE_URL = True
 
 OPTIMIZERS = [
     'thumbor_plugins.optimizers.pngquant'
-    #'thumbor_plugins.optimizers.pngcrush',
+    'thumbor_plugins.optimizers.pngcrush',
     'thumbor_plugins.optimizers.auto'
-    #'thumbor_plugins.optimizers.optipng'
+    'thumbor_plugins.optimizers.optipng'
     'thumbor_plugins.optimizers.mozjpeg'
     'thumbor.optimizers.gifv',
-    #'thumbor.optimizers.jpegtran',
+    'thumbor.optimizers.jpegtran',
 ]
 
 PNGQUANT_PATH = '/var/task/pngquant'
