Pixel Size increase

--- a/source/image-handler/thumbor.conf
+++ b/source/image-handler/thumbor.conf
@@ -210,13 +210,12 @@ PNGQUANT_PATH = '/var/task/pngquant'
 PNGQUANT_QUALITY = 80
 PNGQUANT_SPEED = 3
 
-AUTO_WEBP = True
 PROGRESSIVE_JPEG = True
 USE_GIFSICLE_ENGINE = True
 ALLOW_ANIMATED_GIFS = True
 
 FFMPEG_PATH = '/var/task/ffmpeg'
-GIFSICLE_PATH='/var/task/gifsicle'
+#GIFSICLE_PATH='/var/task/gifsicle'
 JPEGTRAN_PATH = '/var/task/jpegtran'
 PNGCRUSH_PATH = '/var/task/pngcrush'
 IMGMIN_PATH = '/var/task/imgmin'
