--- a/deployment/serverless-image-handler.template
+++ b/deployment/serverless-image-handler.template
@@ -4,7 +4,7 @@
   "Parameters": {
     "OriginS3Bucket": {
       "Description": "S3 bucket that will source your images.",
-      "Default": "indiefolio-test",
+      "Default": "original-images-bucket-name",
       "Type": "String",
       "ConstraintDescription": "Must be a valid S3 Bucket.",
       "MinLength": "1",
@@ -13,7 +13,7 @@
     },
     "OriginS3BucketRegion": {
       "Description": "S3 bucket Region that will source your images.",
-      "Default": "ap-south-1",
+      "Default": "us-east-1",
       "Type": "String",
       "AllowedValues": [
         "ap-south-1",
@@ -25,6 +25,7 @@
         "eu-central-1",
         "eu-west-1",
         "eu-west-2",
+        "eu-west-3",
         "sa-east-1",
         "us-east-1",
         "us-east-2",
@@ -102,8 +103,8 @@
     },
     "Function" : {
       "ImageHandler" : {
-	      "S3Bucket" : "indiefolio-test",
-	      "S3Key" : "solutions/serverless-image-handler.zip",
+	      "S3Bucket" : "%%BUCKET_NAME%%",
+	      "S3Key" : "serverless-image-handler/latest/serverless-image-handler.zip",
 	      "Name" : "serverless-image-handler",
 	      "Handler": "image_handler/lambda_function.lambda_handler",
         "Description": "Serverless Image Handler: This function is invoked by the serverless-image-handler API Gateway to manipulate images with Thumbor.",
@@ -112,8 +113,8 @@
         "MemorySize": "1536"
       },
       "CustomResource" : {
-	      "S3Bucket" : "indiefolio-test",
-	      "S3Key" : "solutions/serverless-image-handler-custom-resource.zip",
+	      "S3Bucket" : "%%BUCKET_NAME%%",
+	      "S3Key" : "serverless-image-handler/latest/serverless-image-handler-custom-resource.zip",
 	      "Name" : "serverless-image-handler-custom-resource",
 	      "Handler": "image_handler_custom_resource/cfn_custom_resource.lambda_handler",
         "Description": "Serverless Image Handler: CloudFormation custom resource function invoked during CloudFormation create, update, and delete stack operations.",
@@ -124,8 +125,8 @@
     },
     "UI" : {
       "Src" : {
-        "Bucket" : "indiefolio-test",
-	      "Key" : "solutions/serverless-image-handler-ui.zip"
+        "Bucket" : "%%BUCKET_NAME%%",
+	      "Key" : "serverless-image-handler/latest/serverless-image-handler-ui.zip"
       },
       "FindReplace" : {
         "DomainName"  : "%%CloudFrontDomainName%%",
@@ -142,6 +143,7 @@
       "eu-west-1":      {"endpoint": "https://s3-eu-west-1.amazonaws.com"},
       "eu-central-1":   {"endpoint": "https://s3.eu-central-1.amazonaws.com"},
       "eu-west-2":      {"endpoint": "https://s3.eu-west-2.amazonaws.com"},
+      "eu-west-3":      {"endpoint": "https://s3.eu-west-3.amazonaws.com"},
       "ap-northeast-1": {"endpoint": "https://s3-ap-northeast-1.amazonaws.com"},
       "ap-northeast-2": {"endpoint": "https://s3.ap-northeast-2.amazonaws.com"},
       "ap-southeast-1": {"endpoint": "https://s3-ap-southeast-1.amazonaws.com"},
@@ -428,6 +430,7 @@
             "AllowedMethods": [ "GET", "HEAD"],
             "TargetOriginId": { "Ref": "ImageHandlerApi"},
             "ForwardedValues": {
+              "Headers" : ["Accept"],
               "QueryString": "false",
               "Cookies": { "Forward": "none" }
             },
