--- a/source/image-handler/thumbor.conf
+++ b/source/image-handler/thumbor.conf
@@ -197,7 +197,7 @@ ALLOW_UNSAFE_URL = False
 #]
 
 OPTIMIZERS = [
-    'thumbor_plugins.optimizers.pngquant'
+    'thumbor_plugins.optimizers.pngquant',
     'thumbor_plugins.optimizers.pngcrush',
     'thumbor_plugins.optimizers.auto'
     'thumbor_plugins.optimizers.optipng'
