Pixel Size increase

--- a/source/image-handler/thumbor.conf
+++ b/source/image-handler/thumbor.conf
@@ -199,9 +199,9 @@ ALLOW_UNSAFE_URL = False
 OPTIMIZERS = [
     'thumbor_plugins.optimizers.pngquant',
     'thumbor_plugins.optimizers.pngcrush',
-    'thumbor_plugins.optimizers.auto'
-    'thumbor_plugins.optimizers.optipng'
-    'thumbor_plugins.optimizers.mozjpeg'
+    'thumbor_plugins.optimizers.auto',
+    'thumbor_plugins.optimizers.optipng',
+    'thumbor_plugins.optimizers.mozjpeg',
     'thumbor.optimizers.gifv',
     'thumbor.optimizers.jpegtran',
 ]
