Pixel Size increase

--- a/source/image-handler/thumbor.conf
+++ b/source/image-handler/thumbor.conf
@@ -155,13 +155,13 @@ DETECTORS = [
 # this is the security key used to encrypt/decrypt urls.
 # make sure this is unique and not well-known
 # This can be any string of up to 16 characters
-SECURITY_KEY = "MY_SECURE_KEY"
+SECURITY_KEY = "L5Z5IFA3VDSPU54J"
 
 # if you enable this, the unencryted URL will be available
 # to users.
 # IT IS VERY ADVISED TO SET THIS TO False TO STOP OVERLOADING
 # OF THE SERVER FROM MALICIOUS USERS
-ALLOW_UNSAFE_URL = False
+ALLOW_UNSAFE_URL = True
 
 # Mixed storage classes. Change them to the fullname of the
 # storage you desire for each operation.
@@ -248,7 +248,7 @@ TC_AWS_LOADER_ROOT_PATH=''
 # This would allow you to load watermarks in over your images dynamically through a URI
 # E.g.
 # http://your-thumbor.com/unsafe/filters:watermark(http://example.com/watermark.png,0,0,50)/s3_bucket/photo.jpg
-TC_AWS_ENABLE_HTTP_LOADER=True
+TC_AWS_ENABLE_HTTP_LOADER=False
 
 TC_AWS_ALLOWED_BUCKETS=False # List of allowed bucket to be requested
 
