Pixel Size increase

--- a/source/image-handler/thumbor.conf
+++ b/source/image-handler/thumbor.conf
@@ -201,7 +201,7 @@ OPTIMIZERS = [
     'thumbor_plugins.optimizers.pngcrush',
     'thumbor_plugins.optimizers.auto',
     'thumbor_plugins.optimizers.optipng',
-    'thumbor_plugins.optimizers.mozjpeg',
+    ##'thumbor_plugins.optimizers.mozjpeg',
     'thumbor.optimizers.gifv',
     'thumbor.optimizers.jpegtran',
 ]
