Pixel Size increase

--- a/source/image-handler/thumbor.conf
+++ b/source/image-handler/thumbor.conf
@@ -197,13 +197,13 @@ ALLOW_UNSAFE_URL = True
 #]
 
 OPTIMIZERS = [
-    'thumbor_plugins.optimizers.pngquant',
-    'thumbor_plugins.optimizers.pngcrush',
+    #'thumbor_plugins.optimizers.pngquant',
+    #'thumbor_plugins.optimizers.pngcrush',
     'thumbor_plugins.optimizers.auto',
-    'thumbor_plugins.optimizers.optipng',
+    #'thumbor_plugins.optimizers.optipng',
     ##'thumbor_plugins.optimizers.mozjpeg',
     'thumbor.optimizers.gifv',
-    'thumbor.optimizers.jpegtran',
+    #'thumbor.optimizers.jpegtran',
 ]
 
 PNGQUANT_PATH = '/var/task/pngquant'
